[package]
name = "crin"
version = "0.1.0"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
edition = "2018"
description = "Crate Information Utility CLI"
repository = "https://github.com/joseluis/crin"
readme = "./README.md"
keywords = ["crates", "information", "cli", "search", "find" ]
categories = ["command-line-interface", "command-line-utilities"]
license = "MIT/Apache-2.0"

[dependencies]
#crates_io_api = "0.4"
#crates_io_api  = {path="../_collab/crates_io_api"}
clap = "2.33"
colored = "1.7"
#chrono = "0.4.6"
timeago = "0.2"
byte-unit = "1.1.0"
num-format = "0.4"
directories = "1.0"
lazy_static = "0.2.8"
toml_edit = "0.1.3"

#[patch.crates-io]
#timeago = {path="../_collab/timeago"}

# TEMPORARY VENDORING crates_io_api
chrono = { version = "0.4.6", features = ["serde"] }
reqwest = { version = "0.9" }
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
url = "1.7.1"
log = "0.4.5"
failure = "0.1.2"
futures = "0.1.25"
tokio = "0.1"
