[package]
name = "crin"
version = "0.2.0"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
edition = "2018"
description = "Crate Information Utility CLI"
repository = "https://github.com/joseluis/crin"
readme = "./README.md"
keywords = ["crates", "information", "cli", "search", "find" ]
categories = ["command-line-interface", "command-line-utilities"]
license = "MIT/Apache-2.0"

[dependencies]
crates_io_api = "0.4"
clap = "2.33"
colored = "1.7"
chrono = "0.4.6"
timeago = "0.2"
byte-unit = "1.1.0"
num-format = "0.4"
directories = "1.0"
lazy_static = "0.2.8"
toml_edit = "0.1.3"

[patch.crates-io]
# The published version in crates.io is from the `vendor_crates_io_api` branch. Until
# several needed PRs are accepted in the crates_io_api repo, I'm working with a fork:
crates_io_api  = {git="https://github.com/joseluis/crates_io_api.git", branch="trunk"}
